@@ -28,6 +28,7 @@
  */
 
 #include "mcs/BeliefTable.h"
+#include "mcs/BridgeRuleTable.h"
 
 #define BOOST_TEST_DYN_LINK
 #define BOOST_TEST_MODULE "testTables"
@@ -91,6 +92,66 @@ BOOST_AUTO_TEST_CASE ( testBeliefTable )
 
     LOG(INFO, "BeliefTable" << btab);
   }
+}
+
+
+
+BOOST_AUTO_TEST_CASE ( testBridgeRuleTable )
+{
+  uint16_t ctx1 = 1;
+  uint16_t ctx2 = 2;
+  uint16_t ctx3 = 3;
+
+  Belief belief_a(ctx1, "a");
+  std::string stra("a");
+
+  Belief belief_b(ctx2, "b");
+
+  Belief belief_c(ctx2, "c");
+  std::string strc("c");
+
+  Belief belief_d(ctx3, "d");
+  Belief belief_e(ctx3, "e");
+  Belief belief_f(ctx3, "f");
+
+  BeliefTable btab;
+  ID ida = btab.storeAndGetID(belief_a);
+  ID idb = btab.storeAndGetID(belief_b);
+  ID idc = btab.storeAndGetID(belief_c);
+  ID idd = btab.storeAndGetID(belief_d);
+  ID ide = btab.storeAndGetID(belief_e);
+  ID idf = btab.storeAndGetID(belief_f);
+
+  ID id_neg_c = ID::nafLiteralFromBelief(idc); 
+  ID id_neg_d = ID::nafLiteralFromBelief(idd);
+
+  Tuple body1;
+  body1.push_back(idb);
+  body1.push_back(id_neg_d);
+
+  Tuple body2;
+  body2.push_back(id_neg_c);
+  body2.push_back(ide);
+  body2.push_back(idf);
+
+  // a :- (2:b), not (3:d).
+  BridgeRule br1(ID::MAINKIND_RULE | ID::SUBKIND_RULE_BRIDGE_RULE, ida, body1);
+
+  // a :- (3:e), (3:f), not (2:c).
+  BridgeRule br2(ID::MAINKIND_RULE | ID::SUBKIND_RULE_BRIDGE_RULE, ida, body2);
+
+  BridgeRuleTable rtab;
+  ID id_br1 = rtab.storeAndGetID(br1);
+  BOOST_CHECK_EQUAL(id_br1.kind, rtab.getByID(id_br1).kind);
+  BOOST_CHECK_EQUAL(id_br1.address, 0);
+
+  ID id_br2 = rtab.storeAndGetID(br2);
+  BOOST_CHECK_EQUAL(id_br2.address, 1);
+  BOOST_CHECK(rtab.getByID(id_br2).head == ida);
+  BOOST_CHECK(rtab.getByID(id_br2).body == body2);
+
+  LOG(INFO,"BeliefTable" << btab);
+  LOG(INFO,"RuleTable" << rtab);
 }
 
 // Local Variables:
